[package]
name = "bananagrams"
version = "0.1.0"
authors = ["Nathaniel Saxe <NathanielSaxophone@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
ndarray = "0.13.1"
lazy_static = "1.4.0"
rayon = "1.3.1"
mimalloc = { version = "*", default-features = false }
